# nao_interaction

nao_interaction_msgs/: CMakeLists.txt  package.xml
nao_interaction_msgs/msg/: BatteryInfo.msg  Expression.msg  ExpressionProperties.msg  FaceDetectedArray.msg  FaceInfo.msg  FacesDetected.msg  GazeInfo.msg  PersonCharacteristics.msg  PersonCharacteristicsArray.msg  PersonDetected.msg  PersonDetectedArray.msg  PersonInfo.msg  PersonMood.msg  PersonMoodArray.msg
nao_interaction_msgs/srv/: Explore.srv  LoadExploration.srv  LocalizationGetErrorMessage.srv  LocalizationTriggerString.srv  MemoryInsert.srv  RelocalizeInMap.srv  SetBreathEnabled.srv  SetTrackerMode.srv  SetTrackerTarget.srv  StartTracker.srv  TrackerLookAt.srv  TrackerPointAt.srv
